Full
/ado-agent-workdir/1/s/***-rcb-atlas-upload/src/main/java/scb/general/client/ParallelTransactionUpload.java:855: error: incompatible types: Date cannot be converted to String
                map.put("batchProcessedDate", tbWrapper.batchProcessedDate); 
                                                       ^
/ado-agent-workdir/1/s/***-rcb-atlas-upload/src/main/java/scb/general/client/ParallelTransactionUpload.java:856: error: incompatible types: Time cannot be converted to String
                map.put("batchProcessedTime", tbWrapper.batchProcessedTime); 
